Cleaning du code

--- a/index.html
+++ b/index.html
@@ -38,23 +38,23 @@
 		<aside>
 			<h2>Fonctionnement</h2>
 			<div class="fonctionnement_liste">
-				<div class="fonctionnement1 align_center">
+				<div class="fonctionnement align_center">
 					<p>1</p>
-					<div class="fonctionnement align_center">
-						<i class="fas fa-mobile-alt sans_couleur"></i>
+					<div class="fonctionnement_text align_center">
+						<i class="fas fa-mobile-alt couleur"></i>
 						<h3>Choisissez un restaurant</h3>
 					</div>
 				</div>
-				<div class="fonctionnement1 align_center">
+				<div class="fonctionnement align_center">
 					<p>2</p>
-					<div class="fonctionnement align_center">
-						<i class="fas fa-list-ul sans_couleur"></i>
+					<div class="fonctionnement_text align_center">
+						<i class="fas fa-list-ul couleur"></i>
 						<h3>Composez votre menu</h3>
 					</div>
 				</div>
-				<div class="fonctionnement1 align_center">
+				<div class="fonctionnement align_center">
 					<p>3</p>
-					<div class="fonctionnement align_center">
+					<div class="fonctionnement_text align_center">
 						<i class="fas fa-store couleur"></i>
 						<h3>Dégustez au restaurant</h3>
 					</div>
