Modification animation coeur

--- a/menu1.html
+++ b/menu1.html
@@ -25,11 +25,11 @@
 			<div class="resto">
 				<div class="titre">
 					<h1>La palette du goût</h1>
-					<div>
-						<div class="coeur"><i class="far fa-heart"></i></div>
-						<div class="coeurplein"><i class="fas fa-heart"></i></div>
+					<div class="coeur center">
+						<i class="far fa-heart coeurvide center"></i>
+						<i class="fas fa-heart coeurplein center"></i>
 					</div>
-				</div>
+			</div>
 				<div class="categorie">
 					<div class="liste_plat" id="delai1">
 						<h2><span>ENTR</span>EES</h2>
