--- a/index.html
+++ b/index.html
@@ -75,9 +75,9 @@
 							<h3>La palette du goût</h3>
 							<p>Ménilmontant</p>
 						</div>
-						<div>
-							<div class="coeur"><i class="far fa-heart"></i></div>
-							<div class="coeurplein"><i class="fas fa-heart "></i></div>
+						<div class="coeur center">
+							<i class="far fa-heart coeurvide center"></i>
+							<i class="fas fa-heart coeurplein center"></i>
 						</div>
 					</div>
 				</a>
@@ -91,9 +91,9 @@
 							<h3>La note enchantée</h3>
 							<p>Charonen</p>
 						</div>
-						<div>
-							<div class="coeur"><i class="far fa-heart"></i></div>
-							<div class="coeurplein"><i class="fas fa-heart "></i></div>
+						<div class="coeur center">
+							<i class="far fa-heart coeurvide center"></i>
+							<i class="fas fa-heart coeurplein center"></i>
 						</div>
 					</div>
 				</a>
@@ -106,9 +106,9 @@
 							<h3>A la française</h3>
 							<p>Cité Rouge</p>
 						</div>
-						<div>
-							<div class="coeur"><i class="far fa-heart"></i></div>
-							<div class="coeurplein"><i class="fas fa-heart "></i></div>
+						<div class="coeur center">
+							<i class="far fa-heart coeurvide center"></i>
+							<i class="fas fa-heart coeurplein center"></i>
 						</div>
 					</div>
 				</a>
@@ -121,9 +121,9 @@
 							<h3>Le délice des sens</h3>
 							<p>Folie-Méricourt</p>
 						</div>
-						<div>
-							<div class="coeur"><i class="far fa-heart"></i></div>
-							<div class="coeurplein"><i class="fas fa-heart "></i></div>
+						<div class="coeur center">
+							<i class="far fa-heart coeurvide center"></i>
+							<i class="fas fa-heart coeurplein center"></i>
 						</div>
 					</div>
 				</a>
