--- a/menu4.html
+++ b/menu4.html
@@ -25,9 +25,9 @@
 			<div class="resto">
 				<div class="titre">
 					<h1>Le délice des sens</h1>
-					<div>
-						<div class="coeur"><i class="far fa-heart"></i></div>
-						<div class="coeurplein"><i class="fas fa-heart"></i></div>
+					<div class="coeur center">
+						<i class="far fa-heart coeurvide center"></i>
+						<i class="fas fa-heart coeurplein center"></i>
 					</div>
 				</div>
 				<div class="categorie">
